fighting to display multiple plots

--- a/prototype/mapwebsite_prototype/src/styles/styles.css
+++ b/prototype/mapwebsite_prototype/src/styles/styles.css
@@ -45,19 +45,23 @@ body {
     font-size: 16px;
 }
 
-/* Styles for the canvas switcher */
-.canvas-container {
+/* Styles for the canvas switcher container */
+#canvas-container {
     position: absolute;
-    display: flex;
+    display: none;
+    justify-content: center;
+    gap: 0px;
     bottom: 10px;
-    left: 400px;
-    width: 400px;
+    left: 600px;
+    width: 450px;
     height: 200px;
 }
 
-.canvas-wrapper {
-    width: 100px;
-    height: 200px;
-    transition: transform 0.3s ease;
-    opacity: 0;
+#chart-box {    
+    width: 380px;
+    /* margin: auto; */
+}
+
+.chart {
+    width: 300px;
 }
