First attempt at combine button

--- a/prototype/timeseries-website/src/styles/styles.css
+++ b/prototype/timeseries-website/src/styles/styles.css
@@ -36,7 +36,7 @@ p {
     gap: 10px;
 }   
 
-#plot-button {
+button {
     background-color: #ffffff;
     font-size: 9px;
     font-weight: bold;
@@ -50,7 +50,7 @@ p {
 }
 
 #timeseries-form-box {
-    display: none;
+    display: block;
     height: 260px;
     left: 10%;
     width: 200px;
@@ -58,17 +58,26 @@ p {
     height: 210px;
 } 
 
+select {
+    font-size: 10px;
+}
+
+#relative, #seperate {
+    font-weight: bold;
+}
+
 /* Middle elements, i.e. Canvas container */
 
-#middle-elements {
+#plot-container {
+    display: none;
     position: absolute;
     left: 30%;
-    width: 40%;
+    width: 35%;
     height: 40%;
     /* width: 50%;   Could be dependend on the right elements */
     bottom: 0;
-    display: flex;
     gap: 10px;
+    background-color: rgba(255, 255, 255, 0.6)
 }
 
 #chart-container {
@@ -84,8 +93,8 @@ p {
 
 #chart-title {
     text-align: center;
-    font-size: 18px;
-    margin-bottom: 10px;
+    font-size: 14px;
+    margin-bottom: 0px;
 }
 
 /* Styles for right elements */
