Right side functioning, server setup correct

--- a/prototype/website/src/styles/Page.css
+++ b/prototype/website/src/styles/Page.css
@@ -4,5 +4,17 @@ p {
 
 .part {
     position: fixed;
-    top: 0;
+    bottom: 0;
+}
+
+.left {
+    left: 0
+}
+
+.middle {
+    left: 40%
+}
+
+.right {
+    left: 90%
 }
