--- a/prototype/website/src/styles/Page.css
+++ b/prototype/website/src/styles/Page.css
@@ -1,24 +1,3 @@
-p {
-    margin: 0;
-}
-
-.part {
-    position: fixed;
-    bottom: 0;
-}
-
-.left {
-    left: 0
-}
-
-.middle {
-    left: 40%
-}
-
-.right {
-    left: 90%
-}
-
-Button {
+.btn-group, Button {
     margin: 5px
 }
