--- a/prototype/website/src/styles/HomePage.css
+++ b/prototype/website/src/styles/HomePage.css
@@ -1,6 +1,6 @@
 .homepage {
   min-height: 100vh;
-  /* background-color: red; */
+  background-color: #bbf7d0;
   min-width: 100vw;
   display: flex;
   flex-direction: column;
@@ -9,6 +9,7 @@
 
 .information-overlay {
   border: 1px solid black;
+  background-color: white;
   position: absolute;
   top: 0;
   left: 0;
@@ -18,6 +19,7 @@
 
 .graphs-overlay {
   border: 1px solid black;
+  background-color: white;
   position: absolute;
   top: 0;
   right: 0;
@@ -27,6 +29,7 @@
 
 .timeline-overlay {
   border: 1px solid black;
+  background-color: white;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -36,7 +39,9 @@
 
 .logo {
   margin-top: 200px;
+  background-color: white;
   font-size: 64px;
   padding: 10px;
   border: 1px solid black;
+  max-width: 600px;
 }
