--- a/prototype/website/src/styles/HomePage.css
+++ b/prototype/website/src/styles/HomePage.css
@@ -1,6 +1,6 @@
 .homepage {
   min-height: 100vh;
-  background-color: #bbf7d0;
+  /* background-color: #bbf7d0; */
   min-width: 100vw;
   display: flex;
   flex-direction: column;
@@ -8,23 +8,24 @@
 }
 
 .information-overlay {
-  border: 1px solid black;
-  background-color: white;
   position: absolute;
   top: 0;
   left: 0;
   padding: 4px;
-  max-width: 200px;
+  max-width: 500px;
 }
 
 .graphs-overlay {
-  border: 1px solid black;
-  background-color: white;
+  /* border: 1px solid black; */
+  /* background-color: white; */
   position: absolute;
   top: 0;
   right: 0;
   padding: 4px;
-  max-width: 200px;
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
 
 .timeline-overlay {
