--- a/prototype/website/src/styles/HomePage.css
+++ b/prototype/website/src/styles/HomePage.css
@@ -15,6 +15,19 @@
   max-width: 500px;
 }
 
+.top-section {
+  /* background-color: blue; */
+  display: flex;
+  flex: 1;
+  width: 100%;
+}
+
+.jumbotron {
+  /* background-color: pink; */
+  padding: 15px;
+  width: 40%;
+}
+
 .graphs-overlay {
   /* border: 1px solid black; */
   /* background-color: white; */
