--- a/prototype/website/src/styles/Timeline.css
+++ b/prototype/website/src/styles/Timeline.css
@@ -4,6 +4,10 @@
   width: 100%;
   overflow: scroll;
 }
+.icon {
+  width: 48px;
+  height: 48px;
+}
 
 .timelineObject {
   flex-shrink: 0;
@@ -11,6 +15,10 @@
   padding-bottom: 32px;
   width: 300px;
   padding-left: 18px;
+  padding-right: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .timelineObject:hover {
