--- a/prototype/website/src/styles/HomePage.css
+++ b/prototype/website/src/styles/HomePage.css
@@ -13,6 +13,7 @@
   left: 0;
   padding: 4px;
   max-width: 500px;
+  overflow-y: scroll;
 }
 
 .top-section {
@@ -38,7 +39,7 @@
 
 .timeline-overlay {
   width: 100%;
-  position: absolute;
+  position: sticky;
   bottom: 0;
   background-color: white;
 }
