--- a/prototype/website/src/styles/HomePage.css
+++ b/prototype/website/src/styles/HomePage.css
@@ -7,15 +7,6 @@
   align-items: center;
 }
 
-.information-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 4px;
-  max-width: 500px;
-  overflow-y: scroll;
-}
-
 .top-section {
   /* background-color: blue; */
   display: flex;
@@ -29,7 +20,7 @@
   padding-bottom: 15px;
   padding-left: 24px;
   padding-right: 24px;
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 
 .jumbotron {
