--- a/frontend/src/styles/HomePage.css
+++ b/frontend/src/styles/HomePage.css
@@ -10,17 +10,20 @@
 .top-section {
   /* background-color: blue; */
   display: flex;
-  flex: 1;
   width: 100%;
+  height: 100vh;
 }
 
-.infosection {
-  flex: 1;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 24px;
-  padding-right: 24px;
-  overflow-y: hidden;
+.infosection-wrapper {
+  margin: 28px;
+}
+.infosection-text {
+  /* background-color: red; */
+}
+
+.infosection-graph {
+  width: 100%;
+  height: 300px;
 }
 
 .jumbotron {
@@ -66,5 +69,5 @@ table tbody tr:nth-of-type(even) {
 }
 
 .jumbotron a {
-  color: #fff
+  color: #fff;
 }
