--- a/frontend/src/styles/HomePage.css
+++ b/frontend/src/styles/HomePage.css
@@ -1,17 +1,20 @@
+html {
+  overflow-x: hidden;
+  /* overflow-y: hidden; */
+}
+
 .homepage {
   min-height: 100vh;
-  /* background-color: #bbf7d0; */
   min-width: 100vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .top-section {
-  /* background-color: blue; */
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 84vh;
+  flex-grow: 1;
 }
 
 .infosection-wrapper {
@@ -31,7 +34,7 @@
 .periodText {
   padding: 10px 16px;
   border-radius: 4px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .infosection-graph {
@@ -52,7 +55,7 @@
 
 .timeline-overlay {
   width: 100%;
-  position: sticky;
+  /* position: absolute; */
   bottom: 0;
   background-color: white;
 }
