--- a/frontend/src/styles/HomePage.css
+++ b/frontend/src/styles/HomePage.css
@@ -1,6 +1,6 @@
 html {
   overflow-x: hidden;
-  /* overflow-y: hidden; */
+  overflow-y: hidden;
 }
 
 .homepage {
@@ -13,8 +13,9 @@ html {
 .top-section {
   display: flex;
   width: 100%;
-  height: 84vh;
+  height: 80vh;
   flex-grow: 1;
+  overflow-y: scroll;
 }
 
 .infosection-wrapper {
@@ -39,7 +40,8 @@ html {
 
 .infosection-graph {
   width: 100%;
-  height: 300px;
+  min-height: 200px;
+  /* height: 300px; */
 }
 
 .jumbotron {
@@ -55,7 +57,7 @@ html {
 
 .timeline-overlay {
   width: 100%;
-  /* position: absolute; */
+  position: relative;
   bottom: 0;
   background-color: white;
 }
