--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -1,8 +1,10 @@
 @import "~bootstrap/scss/bootstrap";
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 
 * {
   font-size: 12px;
   overscroll-behavior: none;
+  font: 12px/1.5 "Open Sans", sans-serif;
 }
 
 .App {
@@ -22,5 +24,5 @@ ol {
 }
 
 $theme-colors: (
-  "primary": #2187e1,
+  "primary": #8eb8e3,
 );
