--- a/frontend/src/styles/HomePage.scss
+++ b/frontend/src/styles/HomePage.scss
@@ -48,6 +48,9 @@ html {
   padding: 15px;
   width: 30%;
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.15);
+  height: fit-content;
+  border-bottom-right-radius: 10px;
+  // min-height: calc(100vh - 130px);
 }
 
 #gotohydeportal:hover {
