--- a/frontend/src/styles/HomePage.scss
+++ b/frontend/src/styles/HomePage.scss
@@ -50,7 +50,7 @@ html {
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.15);
   height: fit-content;
   border-bottom-right-radius: 10px;
-  // min-height: calc(100vh - 130px);
+  min-height: 85vh;
 }
 
 #gotohydeportal:hover {
